--- a/kis_poc_orchestratie.ipynb
+++ b/kis_poc_orchestratie.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1753860489170
@@ -13,18 +13,34 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2025-08-06 07:37:10,169 - INFO - Loading faiss with AVX512 support.\n",
-            "2025-08-06 07:37:10,209 - INFO - Successfully loaded faiss with AVX512 support.\n",
-            "2025-08-06 07:37:10,217 - INFO - Failed to load GPU Faiss: name 'GpuIndexIVFFlat' is not defined. Will not load constructor refs for GPU indexes. This is only an error if you're trying to use GPU Faiss.\n",
-            "Warning: OPENROUTER_API_KEY not found. 'openrouter' client disabled.\n",
-            "Warning: OPENROUTER_API_KEY not found. 'openrouter' client disabled.\n"
+            "2025-08-21 10:31:29,855 - INFO - Loading faiss with AVX512 support.\n",
+            "2025-08-21 10:31:29,855 - INFO - Could not load library with AVX512 support due to:\n",
+            "ModuleNotFoundError(\"No module named 'faiss.swigfaiss_avx512'\")\n",
+            "2025-08-21 10:31:29,856 - INFO - Loading faiss with AVX2 support.\n",
+            "2025-08-21 10:31:29,867 - INFO - Successfully loaded faiss with AVX2 support.\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Loaded FAISS index (60 vectors) and ID set from disk.\n",
+            "Loading .env file from: .env\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Warning: Missing API key for 'openrouter'. Client disabled.\n",
+            "Warning: Missing API key for 'openrouter'. Client disabled.\n",
+            "2025-08-21 10:31:31,513 - INFO - HTTP Request: POST https://ino-ai-foundry-kis.openai.azure.com/openai/deployments/text-embedding-3-large/embeddings?api-version=2025-03-01-preview \"HTTP/1.1 200 OK\"\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Initialized new FAISS index with dimension 3072.\n",
             "Syncing VectorStore with DocumentStore...\n",
             "VectorStore is already in sync. No new documents to add.\n"
           ]
@@ -49,6 +65,40 @@
         "import pandas as pd\n",
         "import os\n",
         "from content_retrieval import query_document, llm,doc_store, summary_doc_store ,embed,embedding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-08-21 10:31:33,206 - INFO - HTTP Request: POST https://ino-ai-foundry-kis.openai.azure.com/openai/responses?api-version=2025-03-01-preview \"HTTP/1.1 200 OK\"\n"
+          ]
+        }
+      ],
+      "source": [
+        "response = llm.process(\"hello\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Warning: Failed to decode LLM output as JSON.\n"
+          ]
+        }
+      ],
+      "source": [
+        "response.content"
       ]
     },
     {
@@ -122,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -145,7 +195,7 @@
         "                                                    taxonomy_path = [doc.metadata['BELASTINGSOORT'], \n",
         "                                                                    doc.metadata['PROCES_ONDERWERP'],\n",
         "                                                                    doc.metadata['PRODUCT_SUBONDERWERP']])\n",
-        "            output = llm.process(prompt)\n",
+        "            output = llm.process(prompt,reasoning_effort='low')\n",
         "            output_json =output.content\n",
         "            if summary_processor.verify_json(output_json):\n",
         "                new_summary = KMEDocument(id = k , title=doc.title,content=output_json['content'],metadata=output_json['metadata'])\n",
